Upload, download and delete attachment functionality tested. Simple caching mechanism added